# stp-watch

./: CMakeLists.txt  LICENSE  README.md
main/: CMakeLists.txt  UI.c  UI.h  datetime.c  datetime.h  idf_component.yml  lcd_driver.c  lcd_driver.h  lvgl_tick.h  main.c  wifi.c  wifi.h
main/connectivity/: time_sync.c  time_sync.h  wifi.c
main/drivers/: lcd_driver.c  lcd_driver.h  lvgl_tick.c
main/fonts/: fonts.h  inter_14.c  inter_20.c  inter_32.c  inter_48.c
main/ui/: labels.c  labels.h  screen.c  screen.h
